[workspace]

members = [
    "algorithms",
    "basic_concepts",
    "basic_types",
    "basic_funcs",
    "control_flows",
    "generic_types",
    "basic_crates",

    "std_fs",
    "concurrency"
]

exclude = [
    "math3d",
    "play-actix",
    "learn-rust",
    "play-wgpu",
    "play-bevy",
    "play-sqlx"
]
