[package]
name = "actix_app"
version = "0.1.0"
authors = ["chuns <chuns.liu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "2.0"
actix-rt = "1.0"
postgres = "0.17.3"
