[package]
name = "http_server"
version = "0.1.0"
authors = ["chuns <chuns.liu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]
