[package]
name = "play-actix"
version = "0.1.0"
authors = ["chuns <chuns.liu@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
toml = "0.5.7"
actix-web = "3"
# r2d2 = "0.8.9"
# rusqlite = "0.24.1"
# diesel = { version = "1.4.4", features = ["postgres"] }
# dotenv = "0.15.0"
